--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathieu-bour/laravel-cache-fallback",
+  "name": "bazikyan/laravel-cache-fallback",
   "description": "Allow Laravel cache connections to fallback to more stable drivers.",
   "version": "1.0.0",
   "keywords": [
@@ -8,30 +8,25 @@
     "fallback",
     "driver"
   ],
-  "homepage": "https://github.com/mathieu-bour/laravel-cache-fallback",
+  "homepage": "https://github.com/bazikyan/laravel-cache-fallback",
   "license": "MIT",
   "authors": [
     {
       "name": "Mathieu Bour",
       "email": "mathieu.tin.bour@gmail.com"
+    },
+    {
+      "name": "Bazikyan Argishti",
+      "email": "bazikyan96@gmail.com"
     }
   ],
   "require": {
-    "php": "^7.1.3 || ^8.0",
-    "illuminate/cache": "5.8.* || ^6.0 || ^7.0 || ^8.0",
-    "illuminate/config": "5.8.* || ^6.0 || ^7.0 || ^8.0",
-    "illuminate/support": "5.8.* || ^6.0 || ^7.0 || ^8.0"
+    "php": "^8.2",
+    "illuminate/cache": "^9.0",
+    "illuminate/config": "^9.0",
+    "illuminate/support": "^9.0"
   },
   "require-dev": {
-    "illuminate/redis": "5.8.* || ^6.0 || ^7.0 || ^8.0",
-    "laravel/framework": "5.8.* || ^6.0 || ^7.0 || ^8.0",
-    "laravel/lumen-framework": "5.8.* || ^6.0 || ^7.0 || ^8.0",
-    "mathieu-bour/hydra": "^0.1",
-    "mathieu-bour/coding-standard": "^1.0",
-    "mockery/mockery": "^1.3",
-    "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
-    "predis/predis": "^1.1",
-    "symfony/var-dumper": "^4.0 || ^5.2"
   },
   "autoload": {
     "psr-4": {
@@ -49,10 +44,6 @@
     "preferred-install": "dist",
     "sort-packages": true,
     "optimize-autoloader": true
-  },
-  "scripts": {
-    "post-install-cmd": "vendor/bin/phpcs --config-set php_version 70103",
-    "post-update-cmd" : "vendor/bin/phpcs --config-set php_version 70103"
   },
   "extra": {
     "laravel": {
